--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+rustdesk-server (1.1.7) UNRELEASED; urgency=medium
+
+  * ipv6 support
+
+ -- rustdesk <info@rustdesk.com>  Fri, 15 Jul 2022 12:27:27 +0200
+
 rustdesk-server (1.1.6) UNRELEASED; urgency=medium
 
   * Initial release
