--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,8 @@
+rustdesk-server (1.1.10) UNRELEASED; urgency=medium
+
+  * fix hangup signal exit when run with nohup
+  * some minors
+
 rustdesk-server (1.1.9) UNRELEASED; urgency=medium
 
   * remove unsafe
