--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,6 @@
+rustdesk-server (1.1.10-3) UNRELEASED; urgency=medium
+  * fix on -2
+
 rustdesk-server (1.1.10-2) UNRELEASED; urgency=medium
 
   * fix hangup signal exit when run with nohup
